--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.10",
+    "@angular-devkit/build-angular": "~20.3.10",
     "@angular/cli": "^20.3.10",
     "@angular/compiler-cli": "^20.3.0",
     "@types/express": "^5.0.1",
