--- a/angular.json
+++ b/angular.json
@@ -49,17 +49,17 @@
             }
           }
         },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "app:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "app:build:production"
+       "serve": {
+         "builder": "@angular-devkit/build-angular:dev-server",
+         "options": {
+         "buildTarget": "app:build" 
+         },
+         "configurations": {
+          "production": {
+            "buildTarget": "app:build:production"
             }
-          }
-        },
+         }
+       },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
